SE JUNTO TODO Y SE AGREGO AL FINAL